-
    Bug fixed: Custom checkbox boolean fields whose values were True
    appeared as a unchecked checkbox on editing details (Real#0893)
    
    Bug fixed: Custom checkbox boolean fields whose values were False
    didn't show up issue details.
    
    Bug fixed: Inability to set the defaultsections Thanks Jean
    (Real#0880)
    
    Bug fixed: Emails encoded in unicode-1-1-utf-7 encoded as utf-7
    
    Bug fixed: Email in body parsed correctly into Unicode.
    
    New feature: Clairvoyant Javascript optimized with JSON.
    
    New feature: Menu icons in a CSS Sprite for much faster loading.
    
    Bug fixed: Manually reset ID counters could cause excessive
    recursion when generiting IDs. (Real#0659) Thanks Nicholas
    
    Bug fixed: Inability to change password if user folder is
    configured to encrypt stored passwords. (Real#0823) Thanks Greg
    
    New feature: Inbound emails with header "X-Autoreply: yes" are
    ignored (Real#0855). Thanks Nicholas

    New feature: Loading the "Delete issue" form is done in AJAX if
    Javascript is enabled.
    
    Bug fixed: Unicode options for the Default sections. (Real#0672)

    New feature: Which list you were at is remembered when visiting an
    issue even after reloading the issue page. Not just for searches.

    New feature: Made DEFAULT_INCLUDE_DESCRIPTION_IN_NOTIFICATIONS
    default to True so that by default the issue description is shown
    in the email notifications.
    
    Bug fixed: Emails in with a subject line containing the word
    'General' without a section option called that failed.

    New feature: Upgraded to latest version of jQuery 1.3.2.

    New feature: Added UnicodeSplitter to be able to properly index
    and search Unicode text. 
    
- 0.10.3

    Bug fixed: Fixed dispatcher() so that it doesn't break on deleted
    issues.
    
    Bug fixed: CMF member can be None without breaking. (Real#0811)
