@@ -123,7 +123,7 @@ DEFAULT_SAVE_DRAFTS = True
 DEFAULT_SHOW_CONFIDENTIAL_OPTION = False
 DEFAULT_SHOW_HIDEME_OPTION = False
 DEFAULT_SHOW_ISSUEURL_OPTION = False
-DEFAULT_ENCODE_EMAILDISPLAY = True
+DEFAULT_ENCODE_EMAILDISPLAY = False
 DEFAULT_SHOW_ALWAYS_NOTIFY_STATUS = True
 DEFAULT_IMAGES_IN_MENU = True
 DEFAULT_USE_ISSUE_ASSIGNMENT = False
